--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ GameInstanceClass=/Game/Core/BP_GIBase.BP_GIBase_C
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX11
 -D3D12TargetedShaderFormats=PCD3D_SM5
--D3D11TargetedShaderFormats=PCD3D_SM5
++D3D11TargetedShaderFormats=PCD3D_SM5
 Compiler=VisualStudio2022
 AudioSampleRate=48000
 AudioCallbackBufferFrameSize=1024
@@ -68,48 +68,48 @@ GreenChromaticityCoordinate=(X=0.300000,Y=0.600000)
 BlueChromaticityCoordinate=(X=0.150000,Y=0.060000)
 WhiteChromaticityCoordinate=(X=0.312700,Y=0.329000)
 r.ClearCoatNormal=False
-r.DynamicGlobalIlluminationMethod=1
-r.ReflectionMethod=1
+r.DynamicGlobalIlluminationMethod=0
+r.ReflectionMethod=0
 r.ReflectionCaptureResolution=128
 r.ReflectionEnvironmentLightmapMixBasedOnRoughness=True
 r.Lumen.HardwareRayTracing=False
 r.Lumen.HardwareRayTracing.LightingMode=0
 r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=False
 r.Lumen.TraceMeshSDFs=1
-r.Shadow.Virtual.Enable=1
+r.Shadow.Virtual.Enable=0
 r.RayTracing=False
 r.RayTracing.Shadows=False
 r.RayTracing.UseTextureLod=False
 r.PathTracing=True
-r.GenerateMeshDistanceFields=True
+r.GenerateMeshDistanceFields=False
 r.DistanceFields.DefaultVoxelDensity=0.200000
-r.Nanite.ProjectEnabled=True
+r.Nanite.ProjectEnabled=False
 r.AllowStaticLighting=True
 r.NormalMapsForStaticLighting=False
 r.ForwardShading=True
 r.VertexFoggingForOpaque=True
 r.SeparateTranslucency=True
-r.TranslucentSortPolicy=0
+r.TranslucentSortPolicy=2
 TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
 xr.VRS.FoveationLevel=0
 xr.VRS.DynamicFoveation=False
-r.CustomDepth=1
-r.CustomDepthTemporalAAJitter=True
+r.CustomDepth=0
+r.CustomDepthTemporalAAJitter=False
 r.PostProcessing.PropagateAlpha=0
-r.DefaultFeature.Bloom=True
-r.DefaultFeature.AmbientOcclusion=True
-r.DefaultFeature.AmbientOcclusionStaticFraction=True
+r.DefaultFeature.Bloom=False
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
 r.DefaultFeature.AutoExposure=False
-r.DefaultFeature.AutoExposure.Method=0
+r.DefaultFeature.AutoExposure.Method=2
 r.DefaultFeature.AutoExposure.Bias=1.000000
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.800000
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.800000
 r.DefaultFeature.MotionBlur=False
 r.DefaultFeature.LensFlare=False
-r.TemporalAA.Upsampling=True
+r.TemporalAA.Upsampling=False
 r.AntiAliasingMethod=0
-r.MSAACount=4
+r.MSAACount=1
 r.DefaultFeature.LightUnits=1
 r.DefaultBackBufferPixelFormat=4
 r.ScreenPercentage.Default=100.000000
@@ -123,7 +123,7 @@ r.EarlyZPass=3
 r.EarlyZPassOnlyMaterialMasking=False
 r.Shadow.CSMCaching=False
 r.DBuffer=True
-r.ClearSceneMethod=1
+r.ClearSceneMethod=0
 r.VelocityOutputPass=0
 r.Velocity.EnableVertexDeformation=2
 r.SelectiveBasePassOutputs=False
@@ -131,21 +131,21 @@ bDefaultParticleCutouts=False
 fx.GPUSimulationTextureSizeX=1024
 fx.GPUSimulationTextureSizeY=1024
 r.AllowGlobalClipPlane=False
-r.GBufferFormat=1
+r.GBufferFormat=0
 r.MorphTarget.Mode=True
 r.GPUCrashDebugging=False
 vr.InstancedStereo=False
-r.MobileHDR=True
+r.MobileHDR=False
 vr.MobileMultiView=False
 r.Mobile.UseHWsRGBEncoding=False
 vr.RoundRobinOcclusion=False
 r.MeshStreaming=False
-r.HeterogeneousVolumes=True
+r.HeterogeneousVolumes=False
 r.WireframeCullThreshold=5.000000
-r.SupportStationarySkylight=True
-r.SupportLowQualityLightmaps=True
-r.SupportPointLightWholeSceneShadows=True
-r.SupportSkyAtmosphere=True
+r.SupportStationarySkylight=False
+r.SupportLowQualityLightmaps=False
+r.SupportPointLightWholeSceneShadows=False
+r.SupportSkyAtmosphere=False
 r.SupportSkyAtmosphereAffectsHeightFog=True
 r.SupportCloudShadowOnForwardLitTranslucent=False
 r.Shadow.TranslucentPerObject.ProjectEnabled=False
@@ -170,8 +170,8 @@ r.Mobile.AllowMovableDirectionalLights=True
 r.Mobile.EnableMovableSpotlightsShadow=False
 r.GPUSkin.Support16BitBoneIndex=False
 r.GPUSkin.Limit2BoneInfluences=False
-r.SupportDepthOnlyIndexBuffers=True
-r.SupportReversedIndexBuffers=True
+r.SupportDepthOnlyIndexBuffers=False
+r.SupportReversedIndexBuffers=False
 r.Mobile.AmbientOcclusion=False
 r.GPUSkin.UnlimitedBoneInfluences=False
 r.GPUSkin.UnlimitedBoneInfluencesThreshold=8
@@ -184,6 +184,8 @@ bDiscardSkeletalMeshOptionalLODs=(Default=False,PerPlatform=())
 VisualizeCalibrationColorMaterialPath=/Engine/EngineMaterials/PPM_DefaultCalibrationColor.PPM_DefaultCalibrationColor
 VisualizeCalibrationCustomMaterialPath=None
 VisualizeCalibrationGrayscaleMaterialPath=/Engine/EngineMaterials/PPM_DefaultCalibrationGrayscale.PPM_DefaultCalibrationGrayscale
+r.SupportLocalFogVolumes=False
+r.VolumetricFog.LightFunction=False
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
@@ -194,40 +196,10 @@ FontDPIPreset=Standard
 FontDPI=72
 ApplicationScale=1.000000
 UIScaleRule=ShortestSide
-UIScaleCurve=(EditorCurveData=(Keys=,DefaultValue=340282346638528859811704183484516925440.000000,PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant),ExternalCurve="/Script/Engine.CurveFloat'/Game/Interface/DPI_Scale_Curve.DPI_Scale_Curve'")
+UIScaleCurve=(EditorCurveData=(Keys=,DefaultValue=340282346638528859811704183484516925440.000000,PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant),ExternalCurve="/Script/Engine.CurveFloat'/Game/Core/DPI_Scale_Curve.DPI_Scale_Curve'")
 bAllowHighDPIInGameMode=False
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/DesktopApp")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/DesktopApp")
-
-[/Script/LinuxTargetPlatform.LinuxTargetSettings]
-SpatializationPlugin=
-SourceDataOverridePlugin=
-ReverbPlugin=
-OcclusionPlugin=
-SoundCueCookQualityIndex=-1
--TargetedRHIs=SF_VULKAN_SM5
-
-[/Script/MacTargetPlatform.MacTargetSettings]
--TargetedRHIs=SF_METAL_SM5
-EditorTargetArchitecture=MacTargetArchitectureUniversal
-TargetArchitecture=MacTargetArchitectureUniversal
-EditorDefaultArchitecture=MacTargetArchitectureHost
-DefaultArchitecture=MacTargetArchitectureHost
-bBuildAllSupportedOnBuildMachine=True
-MetalLanguageVersion=7
-UseFastIntrinsics=False
-EnableMathOptimisations=True
-IndirectArgumentTier=0
-AudioSampleRate=0
-AudioCallbackBufferFrameSize=0
-AudioNumBuffersToEnqueue=0
-AudioMaxChannels=0
-AudioNumSourceWorkers=0
-SpatializationPlugin=
-SourceDataOverridePlugin=
-ReverbPlugin=
-OcclusionPlugin=
-SoundCueCookQualityIndex=-1
 
